--- a/Views/SuccessStoryView.xaml
+++ b/Views/SuccessStoryView.xaml
@@ -139,22 +139,28 @@
                 </ListBox>
             </StackPanel>
 
-            <StackPanel DockPanel.Dock="Bottom" Margin="10,0">
-                <Label Content="{DynamicResource LOCSucessStoryGraphicTitle}" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,10"></Label>
-                <lvc:CartesianChart x:Name="StatsGraphicAchievements" LegendLocation="None" Height="156" Margin="0">
-                    <lvc:CartesianChart.AxisX>
-                        <lvc:Axis x:Name="StatsGraphicAchievementsX" MinValue="0">
-                            <lvc:Axis.Separator>
-                                <lvc:Separator Step="1" />
-                            </lvc:Axis.Separator>
-                        </lvc:Axis>
-                    </lvc:CartesianChart.AxisX>
-                    <lvc:CartesianChart.AxisY>
-                        <lvc:Axis x:Name="StatsGraphicAchievementsY" ShowLabels="False">
-                        </lvc:Axis>
-                    </lvc:CartesianChart.AxisY>
-                </lvc:CartesianChart>
-            </StackPanel>
+            <DockPanel DockPanel.Dock="Bottom" Margin="10,0,10,10">
+                <StackPanel DockPanel.Dock="Top">
+                    <Label Content="{DynamicResource LOCSucessStoryGraphicTitle}" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,10"></Label>
+                </StackPanel>
+
+                <StackPanel DockPanel.Dock="Bottom">
+                    <!-- TODO https://github.com/Live-Charts/Live-Charts/issues/619 -->
+                    <lvc:CartesianChart x:Name="StatsGraphicAchievements" LegendLocation="Bottom" Margin="0" Height="175" MinHeight="50">
+                        <lvc:CartesianChart.AxisX>
+                            <lvc:Axis x:Name="StatsGraphicAchievementsX" MinValue="0" ShowLabels="True">
+                                <lvc:Axis.Separator>
+                                    <lvc:Separator Step="1" />
+                                </lvc:Axis.Separator>
+                            </lvc:Axis>
+                        </lvc:CartesianChart.AxisX>
+                        <lvc:CartesianChart.AxisY>
+                            <lvc:Axis x:Name="StatsGraphicAchievementsY" ShowLabels="False">
+                            </lvc:Axis>
+                        </lvc:CartesianChart.AxisY>
+                    </lvc:CartesianChart>
+                </StackPanel>
+            </DockPanel>
         </DockPanel>
     </DockPanel>
 </Window>
