--- a/Localization/es_ES.xaml
+++ b/Localization/es_ES.xaml
@@ -18,7 +18,7 @@
     <sys:String x:Key="LOCSucessStoryEnableGog">Habilitar logros de GOG</sys:String>
     <sys:String x:Key="LOCSucessStoryEnableOrigin">Habilitar logros de Origin</sys:String>
 
-    <sys:String x:Key="LOCSucessStoryRefreshData">Refresh data</sys:String>
+    <sys:String x:Key="LOCSucessStoryRefreshData">Actualizar datos</sys:String>
     <sys:String x:Key="LOCSucessStoryRefreshAllData">Actualizar todos los datos de logros</sys:String>
 
     <sys:String x:Key="LOCSucessStoryRefreshDataMessage">La base de datos de logros se ha restablecido.</sys:String>
