--- a/source/Views/SuccessStoryView.xaml
+++ b/source/Views/SuccessStoryView.xaml
@@ -20,7 +20,7 @@
         <converters:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
     </UserControl.Resources>
 
-    <Grid Margin="10">
+    <Grid Name="PART_GridContener" Margin="10">
         <Grid Name="PART_DataLoad">
             <ProgressBar IsIndeterminate="True" Width="350" Height="40" />
             <TextBlock Text="{DynamicResource LOCLoadingLabel}"
@@ -90,8 +90,8 @@
                 <Grid Height="70" Margin="0,10,0,0" Grid.Row="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="10" />
                         <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="354" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="30" />
@@ -100,14 +100,14 @@
                     </Grid.RowDefinitions>
 
                     <Label Grid.Column="0" Grid.Row="0" x:Name="lProgressionGlobal" Content="{DynamicResource LOCSuccessStoryGlobalProgression}" HorizontalAlignment="Left" FontSize="16" />
-                    <Grid Grid.Column="2" Grid.Row="0" HorizontalAlignment="Right" Width="354">
+                    <Grid Grid.Column="2" Grid.Row="0">
                         <ProgressBar x:Name="pbProgressionGlobalCount" Minimum="0" Maximum="100" />
                         <Label x:Name="labelProgressionGlobalCount" HorizontalAlignment="Center">
                         </Label>
                     </Grid>
 
                     <Label Grid.Column="0" Grid.Row="2" x:Name="lProgressionLaunched" Content="{DynamicResource LOCSuccessStoryProgressionLaunched}" HorizontalAlignment="Left" FontSize="16" />
-                    <Grid Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right" Width="354">
+                    <Grid Grid.Column="2" Grid.Row="2">
                         <ProgressBar x:Name="pbProgressionLaunchedCount" Minimum="0" Maximum="100" />
                         <Label x:Name="labelProgressionLaunchedCount" HorizontalAlignment="Center">
                         </Label>
