--- a/source/Localization/en_US.xaml
+++ b/source/Localization/en_US.xaml
@@ -199,7 +199,7 @@ Especially useful for Xbox achievements with their larges images which are reduc
     <sys:String x:Key="LOCSsTimeToUnlock">Time to unlock everything</sys:String>
 
     <sys:String x:Key="LOCSuccessStoryCommon">Common</sys:String>
-    <sys:String x:Key="LOCSuccessStoryNoCommon">Non-common</sys:String>
+    <sys:String x:Key="LOCSuccessStoryNoCommon">Uncommon</sys:String>
     <sys:String x:Key="LOCSuccessStoryRare">Rare</sys:String>
     <sys:String x:Key="LOCSuccessStoryUltraRare">Ultra-rare</sys:String>
 
@@ -295,3 +295,4 @@ Here is the list of commands:</sys:String>
     <sys:String x:Key="LOCSsIncludeDescription">Include the description in search</sys:String>
 
 </ResourceDictionary>
+
